# UnderstandAlgo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html  main.cpp  script.js  styles.css
Algorithms/Searching/DFS/: DFS.cpp
Data-Structures/Array/: Array.py
Structures/: Structures.md
Structures/ADT/: Graph.hpp  Graph.tpp
Structures/Static/: StaticArray.h  StaticArray.tpp
Tests/: CMakeLists.txt  StaticArrayTest.cpp
test/: DerivedGraphTesting.cpp  TestDerivedGraph.cpp  test_main.cpp
